12/04/24 Updated GeoIP databases
12/04/11 Added 'cron' function to denorarc for crontab usage 
12/04/11 Updated ScaryNet protocol
11/05/04 r435 Fixed formatting of docs/EVENTS
11/04/10 r428 documented the -protocoldebug option in the -help output
11/04/10 r428 made denora accept options that start with --
11/02/11 r419 Updated Denora icon
11/02/11 r416 Updated Windows installer

Fixes
13/10/17 Fixed StatServ HELP in special case, Stats Admin help would never be shown.
13/10/17 StatServ ADMIN ADD now updates User struct to show they are an admin (we did it in DEL)
13/10/17 StatServ ADMIN SETPASS now updates SQL with the password
13/10/16 cron_chanstats.c does not load if sql is disabled, all cron_* and xmlrpc_* mods now 
         use MOD_STOP if there is error binding the commands.
13/10/16 HTML modules no longer load if html is disabled, and return MOD_STOP if there is an error
         binding to the command, should save some memory.
13/10/15 Fixed compiling most of the source under win32/win64 (sql to come soon)
13/10/14 Fixed a ton of compiler warnings and errors, can build on Mac OS X
13/10/11 Fixed an error in the ./Config script
13/10/06 Fixed the 'kill of nonexistent nick' error in inspircd12
13/06/05 Fixed the 'command out of sync' error caused by mysql_optimize and mysql_backup
13/06/02 Fixed a memleak in cron_chanstats.c
13/05/06 Fixed merging users with itself.
12/11/02 Fixed a misplaced free() in unrealircd.c (#1458)
12/10/15 Fixed a misplacement of u in users.c
12/10/10 Fixed a double free in scarynet.c/denora_event_quit
12/10/10 Free msg in <protocol>.c/denora_event_quit
12/07/25 Fixed win32 specific warnings, in some cases the fugly way
12/07/23 Fixed Config not remembering thread settings
12/07/23 Threading needed more fixes, hope it works now :) (Now works)
12/07/22 Fixed threading by actually documenting it in conf (duh)
12/07/22 Several more warnings and fixes in sysconf.h.in / configure(.in)
12/07/17 Fixed some warnings on x86_64