@@ -799,6 +799,10 @@ char *inspircd11_lkill_killer(char *message)
 	killer = strtok(buf, " ");
 	killer = strtok(NULL, " ");
 	killer++;
+	if (buf)
+	{
+		free(buf);
+	}
 
 	return killer;
 }
