@@ -68,6 +68,8 @@ Changes
 11/02/11 r416 Updated Windows installer
 
 Fixes
+13/10/18 Fixed memory leak in protocol modules in function *_lkill_killer() sadly this needs to be fixed
+         since the core has a strtok() function that will save tons of time.
 13/10/17 Fixed StatServ HELP in special case, Stats Admin help would never be shown.
 13/10/17 StatServ ADMIN ADD now updates User struct to show they are an admin (we did it in DEL)
 13/10/17 StatServ ADMIN SETPASS now updates SQL with the password
